# food_journey

./: .env  .env.example  .gitignore  API.md  DEPLOY.md  Dockerfile  README.md  alembic.ini  api-docs.html  create_tables.py  create_tables_sync.py  docker-compose.yml  download_model.py  frontend_update_instructions.md  generate_openapi.py  main.py  main.py.bak  nohup.out  openapi.json  performance_report.html  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  set_proxy.sh  setup.py  setup_env.sh  sql_app.db  test.db  test.py  test_voice_recognition.py
ai_backend/: base64.txt  chat_core.py  gradio_service.py  image_core.py  pyproject.toml  test.py  voice_core.py
ai_backend/.gradio/flagged/: dataset1.csv
alembic/: env.py
configs/: wenetspeech_conformer.yaml
docs/: api.md
food_journey_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
healthtrack demo/: BodyDataDetailView.swift  ContentView.swift  DietDetailView.swift  RecoveryDetailView.swift  TrainingProgressDetailView.swift  healthtrack_demoApp.swift
src/: __init__.py  app.py  async_handler.py  cache_manager.py  config.py  database.py  docs.py  error_handler.py  gradio_interface.py  image_processor.py  input_processor.py  llm_handler.py  logging_config.py  main.py  models.py  recipe.py  recipe_manager.py  user_profile.py  validators.py  voice_processor.py  web_app.py
ssl/: key.pem
ssl_export/: cert_base64.txt  food_journey_cert.pem
tests/: README.md  conftest.py  test_auth.py  test_chat.py  test_comprehensive.py  test_docs.py  test_favorites.py  test_frontend_integration.py  (+4 more)
(+90 files in other folders)
