[project]
name = "ai-service"
version = "0.1.0"
description = ""
authors = [
    {name = "StringNight",email = "stringnightgg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "gradio (>=5.12.0,<6.0.0)",
    "ollama (>=0.4.5,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
